# jinjasql-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
minijinjasql/: Cargo.toml
minijinjasql-python/: Cargo.toml  pyproject.toml
minijinjasql-python/minijinjasql/tests/: benchmark.py  test_basic.py
minijinjasql-python/src/: lib.rs
minijinjasql/src/: lib.rs
scripts/: python-helper.py
src/: lib.rs
templates/: basic.sql.j2  complex.sql.j2
