[tool.poetry]
name = "minijinjasql-python"
version = "0.1.0"
description = ""
authors = ["Will Eaton <me@wseaton.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
maturin = "^0.12.6"
pytest = "^6.2.5"
jinjasql = "^0.1.8"
pytest-benchmark = "^3.4.1"
docopt = "^0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
